# DeepLearning

./: .gitignore  pyproject.toml  pytorch-mac-test.ipynb  simpsons_baseline.ipynb
Classification metrics accuracy/: classification_metrics_accuracy.ipynb  classification_metrics_precision_recall.ipynb  classification_metrics_roc_auc.ipynb
Convolutional neural network/: [homework]dense_and_convolutional_nn.ipynb  convnet_pytorch.ipynb  convolution_pooling.ipynb
Feature Engineering/: Feature_engineering.ipynb
Fundamentals of machine learning/: knn.ipynb  ml_basics.ipynb
