[tool.poetry]
name = "deeplearning"
version = "0.1.0"
description = ""
authors = ["Andrey Sologub <sologub.a@mailbox.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
